Fixes downvote arrow getting cut off (like anyone downvotes anyway)

--- a/content.less
+++ b/content.less
@@ -270,6 +270,8 @@ body > .content {
 }
 
 .arrow.down {
+	margin-bottom: 2px;
+	
     background-position: 0px -@arrow-height !important;
 	opacity: @downvote-opacity;
 	
